--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "diamond-server-pro",
+  "name": "diamond-pro-cms",
   "version": "1.0.0",
-  "description": "A professional diamond portfolio CMS",
+  "description": "A professional diamond portfolio CMS with Postgres and Cloudinary",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "connect-sqlite3": "^0.9.13",
+    "cloudinary": "^1.41.3",
+    "connect-pg-simple": "^9.0.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.7",
+    "pg": "^8.11.3",
     "qrcode": "^1.5.3",
-    "sqlite3": "^5.1.6",
     "ua-parser-js": "^1.0.35",
     "xlsx": "^0.18.5"
   }
